--- a/_docs2/1. 전기자기학.md
+++ b/_docs2/1. 전기자기학.md
@@ -1,7 +1,15 @@
 ---
 layout: default
 title: 1. 전기자기학
-nav_order: 0
+nav_order: 1
 has_children: true
 ---
+총 11개 장으로 구성.
 
+핵심 장 아래 5개 장에 12~14문제 집중되어 있음. 
+
+- 2장 진공중의 정전계
+- 7장 진공중의 정자계
+- 3장 진공중의 도체계
+- 4장 유전체
+- 8장 자성체와 자기회로
