--- a/_docs2/1.1. 강의별 키워드.md
+++ b/_docs2/1.1. 강의별 키워드.md
@@ -5,4 +5,74 @@ parent: 1. 전기자기학
 layout: default
 ---
 
-    1. 강의 제목: ~~
+## 오리엔테이션 / 이종칠 원장님
+- 기초반 오리엔테이션 62분
+
+## 전기자기학 오리엔테이션
+- 전기자기학 오리엔테이션 21분
+
+## 전기자기학 기초수학
+- 전기자기학 기초수학(1) p.ⅵ~ⅶ 34분
+- 전기자기학 기초수학(2) p.ⅷ~ⅹ 37분
+
+## 전기자기학 1장
+- 전기자기학 1장(1) p.03~04. 08 41분
+- 전기자기학 1장(2) p.05~06. 08~09 39분
+- 전기자기학 1장(3) p.06~07. 10~11 39분
+
+## 전기자기학 2장
+- 전기자기학 2장(1) p.17~18 47분
+- 전기자기학 2장(2) p.19~21 41분
+- 전기자기학 2장(3) p.22~27 41분
+- 전기자기학 2장(4) p.27~30 42분
+- 전기자기학 2장(5) p.31~34 31분
+- 전기자기학 2장(6) p.35~41. 44 58분
+- 전기자기학 2장(7) p.42~43 44분
+- 전기자기학 2장(8) p.44~46 30분
+- 전기자기학 1&2장 모의고사 문제지
+- 전기자기학 1&2장 모의고사 문제풀이 28분
+
+## 전기자기학 7장
+- 전기자기학 7장(1) p.141 33분
+- 전기자기학 7장(2) p.142~144 32분
+- 전기자기학 7장(3) p.144~151 35분
+- 전기자기학 7장(4) p.151~156 44분
+- 전기자기학 7장(5) p.156~162 27분
+- 전기자기학 7장(6) p.163~166 30분
+- 전기자기학 7장(7) p.167~170 20분
+
+## 전기자기학 3장
+- 전기자기학 3장(1) p.55~57 31분
+- 전기자기학 3장(2) p.58~62 40분
+- 전기자기학 3장(3) p.63~66 30분
+- 전기자기학 3장(4) p.67~75 54분
+
+## 전기자기학 4장
+- 전기자기학 4장(1) p.83~87 55분
+- 전기자기학 4장(2) p.88~92 50분
+- 전기자기학 4장(3) p.93~97 22분
+- 전기자기학 4장(4) p.98~101 39분
+- 전기자기학 4장(5) p.102~105 13분
+
+## 전기자기학 8장
+- 전기자기학 8장(1) p.177~180 22분
+- 전기자기학 8장(2) p.181~185 37분
+- 전기자기학 8장(3) p.186~189 39분
+- 전기자기학 8장(4) p.190~194 27분
+
+## 전기자기학 9장
+- 전기자기학 9장(1) p.201~205 27분
+- 전기자기학 9장(2) p.206~209 33분
+
+## 전기자기학 10장
+- 전기자기학 10장(1) p.215~218 49분
+- 전기자기학 10장(2) p.219~225 32분
+- 전기자기학 10장(3) p.226~230 35분
+
+## 전기자기학 6장
+- 전기자기학 6장(1) p.125~129 40분
+- 전기자기학 6장(2) p.130~135 42분
+
+## 전기자기학 11장
+- 전기자기학 11장(1) p.237~243 33분
+- 전기자기학 11장(2) p.244~253 46분
