--- a/_docs3/0. 판다스 연습 튜토리얼.md
+++ b/_docs3/0. 판다스 연습 튜토리얼.md
@@ -16,4 +16,14 @@ df = pd.read_csv()
 '''
 </details>
 
+Q2. 데이터의 상위 5개 행 출력
+
+<details>
+<summary>1. 정답</summary>
+
+```python
+df.head(5)
+```
+</details>
+
 
