detalis 추가 pre, code 추가

--- a/_docs3/0. 판다스 연습 튜토리얼.md
+++ b/_docs3/0. 판다스 연습 튜토리얼.md
@@ -10,20 +10,22 @@ Q1. 데이터를 로드하라.
 <summary>1. 정답</summary>
 
 <!-- summary 아래 한칸 공백 두어야함 -->
-'''python
+<pre><code class="language-python">
 import pandas as pd
 df = pd.read_csv()
-'''
+</code></pre>
 </details>
 
 Q2. 데이터의 상위 5개 행 출력
 
 <details>
-<summary>1. 정답</summary>
+<summary>2. 정답</summary>
 
 ```python
 df.head(5)
 ```
 </details>
+
+
 
 
