판다스 튜토리얼 95

--- a/_docs3/0. 판다스 연습 튜토리얼.md
+++ b/_docs3/0. 판다스 연습 튜토리얼.md
@@ -8,7 +8,6 @@ has_children: true
 Q1. 데이터를 로드하라.
 <details>
 <summary>1. 정답</summary>
-
 <!-- summary 아래 한칸 공백 두어야함 -->
 <pre><code class="language-python">
 import pandas as pd
@@ -25,6 +24,182 @@ Q2. 데이터의 상위 5개 행 출력
 df.head(5)
 ```
 </details>
+
+
+Q3. 데이터의 행과 열의 개수 파악하라
+
+Q4. 전체 컬럼을 출력하라
+
+Q5. 6번째 컬럼명을 출력하라
+
+Q6. 6번째 컬럼의 데이터 타입 확인
+Q7. 데이터셋의 인덱스 구성은 어떤가
+Q8. 6번째 컬럼의 3번째 값은 무엇인가?
+Q9. 데이터를 로드하라. 컬럼이 한글이기에 적절한 처리 필요
+Q10. 데이터 마지막 3개행을 출력하라
+Q11. 수치형 변수를 가진 컬럼을 출력하라
+Q12. 범주형 변수를 가진 컬럼을 출력하라
+Q13. 각 컬럴의 결측치 숫자를 파악하라
+Q14. 각 컬럼의 데이터 수, 데이터타임을 한번에 확인하라
+Q15. 각 수치형 변수의 분포(사분위, 평균, 표준편차, 최대, 최소)를 확인하라
+Q16. 거주인구 컬럼의 값들을 출력하라
+Q17. 평균 속도 컬럼의 4분위 (IQR) 값을 구하여라
+Q18. 읍면동명 컬럼의 유일값 갯수를 출력하라
+Q19. 읍면동명 컬럼의 유일값을 모두 출력하라
+
+### 필터링 & 소팅
+Q20. 데이터를 로드하라
+Q21. Quantity 컬럼 값이 3인 데이터를 추출하여 첫 5행을 출력하라.
+Q22. quantity 컬럼 값이 3인 데이터를 추춣하여 index를 0부터 정렬하고 첫 5행 출력하라
+Q23. quantity, item_price 두개의 컬럼으로 구성된 새로운 데이터 프레임을 정의하라
+Q24. item_price 컬럼의 달러표시 문자를 제거하고 float 타입으로 저장하여 new_price 컬럼에 저장하라
+Q25. new_price 컬럼이 5이하의 값을 가지는 데이터프레임을 추출하고, 전체 갯수를 구하여라
+Q26. item_name명이 chicken salad bowl인 데이터 프레임을 추출하라고 index 값을 초기화 하여라
+Q27. new_price값이 9이하이고 item_name값이 chicken salad bowl인 데이터 프레임을 추출하라
+Q28. df의 new_price 컬럼 값에 따라 오름차순으로 정리하고 index를 초기화하여라
+Q29. df의 item_name 컬럼 값 중 Chips 포함하는 경우의 데이터를 출력하라
+Q30. df의 짝수번째 컬럼만을 포함하는 데이터 프레임을 출력하라.
+Q31. df의 new_price 컬럼 값에 따라 내림차순으로 정리하고 index를 초기화 하여라
+Q32. df의 item_name 컬럼 값이 steak salad 또는 Bowl 인 데이터를 인덱싱하라
+Q33. df의 item_name 컬럼 값이 Steak Salad 또는 Bowl 인 데이터를 데이터 프레임화 한 후, item_name을 기준으로 중복행이 있으면 제거하되 첫번째 케이스만 남겨라.
+Q34. df의 item_name 컬럼 값이 Steak Salad 또는 Bowl 인 데이터를 데이터 프레임화 한 후, item_name를 기준으로 중복행이 있으면 제거하되 마지막 케이스만 남겨라
+Q35. df의 데이터 중 new_price값이 new_price값의 평균값 이상을 가지는 데이터들을 인덱싱하라
+
+Q36. df의 데이터 중 item_name의 값이 Izze 데이터를 Fizzy Lizzy로 수정하라
+
+Q37. df의 데이터 중 choice_description 값이 NaN 인 데이터의 갯수를 구하여라
+
+Q38. df의 데이터 중 choice_description 값이 NaN 인 데이터를 NoData 값으로 대체하라(loc 이용)
+
+Q39. df의 데이터 중 choice_description 값에 Black이 들어가는 경우를 인덱싱하라
+
+Q40. df의 데이터 중 choice_description 값에 Vegetables 들어가지 않는 경우의 갯수를 출력하라
+
+Q41. df의 데이터 중 item_name 값이 N으로 시작하는 데이터를 모두 추출하라
+
+Q42. df의 데이터 중 item_name 값의 단어갯수가 15개 이상인 데이터를 인덱싱하라
+
+Q43. df의 데이터 중 new_price값이 lst에 해당하는 경우의 데이터 프레임을 구하고 그 갯수를 출력하라 lst =[1.69, 2.39, 3.39, 4.45, 9.25, 10.98, 11.75, 16.98]
+
+### Grouping 
+Q44. 데이터를 로드하고 상위 5개 컬럼을 출력하라
+
+Q45. 데이터의 각 host_name의 빈도수를 구하고 host_name으로 정렬하여 상위 5개를 출력하라
+
+Q46. 데이터의 각 host_name의 빈도수를 구하고 빈도수 기준 내림차순 정렬한 데이터 프레임을 만들어라. 빈도수 컬럼은 counts로 명명하라
+
+Q47. neighbourhood_group의 값에 따른 neighbourhood컬럼 값의 갯수를 구하여라
+
+Q48. neighbourhood_group의 값에 따른 neighbourhood컬럼 값 중 neighbourhood_group그룹의 최댓값들을 출력하라
+
+Q49. neighbourhood_group 값에 따른 price값의 평균, 분산, 최대, 최소 값을 구하여라
+
+Q50. neighbourhood_group 값에 따른 reviews_per_month 평균, 분산, 최대, 최소 값을 구하여라
+
+Q51. neighbourhood 값과 neighbourhood_group 값에 따른 price 의 평균을 구하라
+
+Q52. neighbourhood 값과 neighbourhood_group 값에 따른 price 의 평균을 계층적 indexing 없이 구하라
+
+Q53. neighbourhood 값과 neighbourhood_group 값에 따른 price 의 평균을 계층적 indexing 없이 구하고 nan 값은 -999값으로 채워라
+
+Q54. 데이터중 neighbourhood_group 값이 Queens값을 가지는 데이터들 중 neighbourhood 그룹별로 price값의 평균, 분산, 최대, 최소값을 구하라
+
+Q55. 데이터중 neighbourhood_group 값에 따른 room_type 컬럼의 숫자를 구하고 neighbourhood_group 값을 기준으로 각 값의 비율을 구하여라
+
+Q56. 데이터를 로드하고 데이터 행과 열의 갯수를 출력하라
+
+Q57. Income_Category의 카테고리를 map 함수를 이용하여 다음과 같이 변경하여 newIncome 컬럼에 매핑하라 Unknown : N
+Less than $40K : a
+$40K - $60K : b
+$60K - $80K : c
+$80K - $120K : d
+$120K +’ : e
+
+Q58. Income_Category의 카테고리를 apply 함수를 이용하여 다음과 같이 변경하여 newIncome 컬럼에 매핑하라 Unknown : N
+Less than $40K : a
+$40K - $60K : b
+$60K - $80K : c
+$80K - $120K : d
+$120K +’ : e
+
+Q59. Customer_Age의 값을 이용하여 나이 구간을 AgeState 컬럼으로 정의하라. (0~9 : 0 , 10~19 :10 , 20~29 :20 … 각 구간의 빈도수를 출력하라
+
+Q60. Education_Level의 값중 Graduate단어가 포함되는 값은 1 그렇지 않은 경우에는 0으로 변경하여 newEduLevel 컬럼을 정의하고 빈도수를 출력하라
+
+Q61. Credit_Limit 컬럼값이 4500 이상인 경우 1 그외의 경우에는 모두 0으로 하는 newLimit 정의하라. newLimit 각 값들의 빈도수를 출력하라
+
+Q62. Marital_Status 컬럼값이 Married 이고 Card_Category 컬럼의 값이 Platinum인 경우 1 그외의 경우에는 모두 0으로 하는 newState컬럼을 정의하라. newState의 각 값들의 빈도수를 출력하라
+ 
+Q63. Gender 컬럼값 M인 경우 male F인 경우 female로 값을 변경하여 Gender 컬럼에 새롭게 정의하라. 각 value의 빈도를 출력하라
+
+### Time Series
+
+Q64.데이터를 로드하고 각 열의 데이터 타입을 파악하라
+
+Q65. Yr_Mo_Dy을 판다스에서 인식할 수 있는 datetime64타입으로 변경하라
+
+Q66. Yr_Mo_Dy에 존재하는 년도의 유일값을 모두 출력하라
+
+
+Q67. Yr_Mo_Dy에 년도가 2061년 이상의 경우에는 모두 잘못된 데이터이다. 해당경우의 값은 100을 빼서 새롭게 날짜를 Yr_Mo_Dy 컬럼에 정의하라
+
+Q68. 년도별 각컬럼의 평균값을 구하여라
+
+Q69. weekday컬럼을 만들고 요일별로 매핑하라 ( 월요일: 0 ~ 일요일 :6)
+
+Q70. weekday컬럼을 기준으로 주말이면 1 평일이면 0의 값을 가지는 WeekCheck 컬럼을 만들어라
+
+Q71. 년도, 일자 상관없이 모든 컬럼의 각 달의 평균을 구하여라
+
+Q72. 모든 결측치는 컬럼기준 직전의 값으로 대체하고 첫번째 행에 결측치가 있을경우 뒤에있는 값으로 대채하라
+
+Q73. 년도 - 월을 기준으로 모든 컬럼의 평균값을 구하여라
+
+Q74. RPT 컬럼의 값을 일자별 기준으로 1차차분하라
+
+Q75. RPT와 VAL의 컬럼을 일주일 간격으로 각각 이동평균한값을 구하여라
+
+Q76. 년-월-일:시 컬럼을 pandas에서 인식할 수 있는 datetime 형태로 변경하라. 서울시의 제공데이터의 경우 0시가 24시로 표현된다
+
+Q77. 일자별 영어요일 이름을 dayName 컬럼에 저장하라
+
+Q78. 일자별 각 PM10등급의 빈도수를 파악하라
+
+Q79. 시간이 연속적으로 존재하며 결측치가 없는지 확인하라
+
+Q80. 오전 10시와 오후 10시(22시)의 PM10의 평균값을 각각 구하여라
+
+Q81. 날짜 컬럼을 index로 만들어라
+
+Q82. 데이터를 주단위로 뽑아서 최소,최대 평균, 표준표차를 구하여라
+
+### Pivot
+Q83. Indicator을 삭제하고 First Tooltip 컬럼에서 신뢰구간에 해당하는 표현을 지워라
+
+Q84. 년도가 2015년 이상, Dim1이 Both sexes인 케이스만 추출하라
+
+Q85. 84번 문제에서 추출한 데이터로 아래와 같이 나라에 따른 년도별 사망률을 데이터 프레임화 하라
+
+Q86. Dim1에 따른 년도별 사망비율의 평균을 구하라
+
+Q87. 데이터에서 한국 KOR 데이터만 추출하라
+
+Q88. 한국 올림픽 메달리스트 데이터에서 년도에 따른 medal 갯수를 데이터프레임화 하라
+
+Q89. 전체 데이터에서 sport종류에 따른 성별수를 구하여라
+
+Q90. 전체 데이터에서 Discipline종류에 따른 따른 Medal수를 구하여라
+
+### Merge, Concat
+Q91. df1과 df2 데이터를 하나의 데이터 프레임으로 합쳐라
+
+Q92. df3과 df4 데이터를 하나의 데이터 프레임으로 합쳐라. 둘다 포함하고 있는 년도에 대해서만 고려한다
+
+Q93. df3과 df4 데이터를 하나의 데이터 프레임으로 합쳐라. 모든 컬럼을 포함하고, 결측치는 0으로 대체한다
+
+Q94. df5과 df6 데이터를 하나의 데이터 프레임으로 merge함수를 이용하여 합쳐라. Algeria컬럼을 key로 하고 두 데이터 모두 포함하는 데이터만 출력하라
+
+Q95. df5과 df6 데이터를 하나의 데이터 프레임으로 merge함수를 이용하여 합쳐라. Algeria컬럼을 key로 하고 합집합으로 합쳐라
 
 
 
