기초 시험은 어떻게 할까

--- a/_docs/시험 구정 정리.md
+++ b/_docs/시험 구정 정리.md
@@ -6,4 +6,9 @@ has_children: true
 ---
 
 <가장 기초적인 시험>
-단선
+단선 
+    - 케이블별 단선 시 신호가 어떻게 나오는가? (예상)
+    - 경우의 수를 시행하면서 결과 확인(확인)
+    - 컨트롤러 소프트웨어를 수정해서 데이터를 저장하자.
+        - 각 경우에서 센서값들이 어떻게 나오는지 확인한다.
+        - 아마 전원은 안된다. 
