--- a/_docs3/0. 판다스 연습 튜토리얼.md
+++ b/_docs3/0. 판다스 연습 튜토리얼.md
@@ -754,76 +754,115 @@ Q73. 년도 - 월을 기준으로 모든 컬럼의 평균값을 구하여라
 Ans = df.groupby(df.Yr_Mo_Dy.dt.to_period('M')).mean()
 </code></pre>
 </details>
+
 Q74. RPT 컬럼의 값을 일자별 기준으로 1차차분하라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+ans = df["RPT"].diff()
 </code></pre>
 </details>
+
 Q75. RPT와 VAL의 컬럼을 일주일 간격으로 각각 이동평균한값을 구하여라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
+ans= df[['RPT','VAL']].rolling(7).mean()
 
+DataFrame.rolling() --> [text](https://wikidocs.net/152788)
 </code></pre>
 </details>
+
 Q76. 년-월-일:시 컬럼을 pandas에서 인식할 수 있는 datetime 형태로 변경하라. 서울시의 제공데이터의 경우 0시가 24시로 표현된다
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
+df =pd.read_csv('https://raw.githubusercontent.com/Datamanim/pandas/main/seoul_pm.csv')
 
+def change_date(x):
+    import datetime
+    hour = x.split(':')[1]
+    date = x.split(":")[0]
+    
+    if hour =='24':
+        hour ='00:00:00'
+        
+        FinalDate = pd.to_datetime(date +" "+hour) +datetime.timedelta(days=1)
+        
+    else:
+        hour = hour +':00:00'
+        FinalDate = pd.to_datetime(date +" "+hour)
+    
+    return FinalDate
+
+df['(년-월-일:시)'] = df['(년-월-일:시)'].apply(change_date)
+
+Ans = df
 </code></pre>
 </details>
+
 Q77. 일자별 영어요일 이름을 dayName 컬럼에 저장하라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+df['dayName']  =df['(년-월-일:시)'].dt.day_name()
+Ans =df['dayName']
 </code></pre>
 </details>
-Q78. 일자별 각 PM10등급의 빈도수를 파악하라
+
+Q78. 요일별 각 PM10등급의 빈도수를 파악하라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+Ans1 = df.groupby(['dayName','PM10등급'],as_index=False).size()
+Ans2 = Ans1.pivot(index='dayName',columns='PM10등급',values='size').fillna(0)
 </code></pre>
 </details>
+
 Q79. 시간이 연속적으로 존재하며 결측치가 없는지 확인하라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+# 시간을 차분했을 경우 첫 값은 nan, 이후 모든 차분값이 동일하면 연속이라 판단한다.
+check = len(df['(년-월-일:시)'].diff().unique())
+if check ==2:
+    Ans =True
+else:
+    Ans = False
 </code></pre>
 </details>
+
 Q80. 오전 10시와 오후 10시(22시)의 PM10의 평균값을 각각 구하여라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+ans = df.groupby(df['(년-월-일:시)'].dt.hour).mean().iloc[[10,22],[0]]
+ans = df.groupby(df['(년-월-일:시)'].dt.hour).mean().iloc[[10,22],[0]]
 </code></pre>
 </details>
+
 Q81. 날짜 컬럼을 index로 만들어라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+df.set_index('(년-월-일:시)',inplace = True, drop = True)
 </code></pre>
 </details>
-Q82. 데이터를 주단위로 뽑아서 최소,최대 평균, 표준표차를 구하여라
+
+Q82. 데이터를 주단위로 뽑아서 최소, 최대, 평균, 표준표차를 구하여라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+ans = df.resample('W').agg(['min', 'max', 'mean', 'std'])
 </code></pre>
 </details>
 
@@ -833,63 +872,75 @@ Q83. Indicator을 삭제하고 First Tooltip 컬럼에서 신뢰구간에 해당
 <summary>정답 보기</summary>
 
 <pre><code>
-
+df = pd.read_csv('https://raw.githubusercontent.com/Datamanim/pandas/main/under5MortalityRate.csv')
 </code></pre>
 </details>
+
 Q84. 년도가 2015년 이상, Dim1이 Both sexes인 케이스만 추출하라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+target = df[(df.Period >=2015) & (df.Dim1 =='Both sexes')]
+Ans = target
 </code></pre>
 </details>
+
 Q85. 84번 문제에서 추출한 데이터로 아래와 같이 나라에 따른 년도별 사망률을 데이터 프레임화 하라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+Ans = target.pivot(index='Location',columns='Period',values='First Tooltip')
 </code></pre>
 </details>
+
 Q86. Dim1에 따른 년도별 사망비율의 평균을 구하라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+Ans = df.pivot_table(index='Dim1',columns='Period',values='First Tooltip',aggfunc='mean')
 </code></pre>
 </details>
+
 Q87. 데이터에서 한국 KOR 데이터만 추출하라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+df = pd.read_csv('https://raw.githubusercontent.com/Datamanim/pandas/main/winter.csv')
+kr = df[df.Country=='KOR']
+Ans = kr
 </code></pre>
 </details>
+
 Q88. 한국 올림픽 메달리스트 데이터에서 년도에 따른 medal 갯수를 데이터프레임화 하라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+Ans = kr.pivot_table(index='Year',columns='Medal',aggfunc='size').fillna(0)
+ans = kr.pivot_table(index='Year', columns = 'Medal, aggfunc='size').fillna(0)
 </code></pre>
 </details>
+
 Q89. 전체 데이터에서 sport종류에 따른 성별수를 구하여라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+ans = df.pivot_table(index='Sport', columns='Gender', aggfunc='size').fillna(0)
 </code></pre>
 </details>
+
 Q90. 전체 데이터에서 Discipline종류에 따른 따른 Medal수를 구하여라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+ans = df.pivot_table(index='Discipline', columns ='Medal', aggfunc = 'size')
+Discipline은 훈련 이라는 뜻도 있지만 여기서 종목으로 번역하면 된다.
 </code></pre>
 </details>
 
@@ -899,39 +950,48 @@ Q91. df1과 df2 데이터를 하나의 데이터 프레임으로 합쳐라
 <summary>정답 보기</summary>
 
 <pre><code>
+df = pd.read_csv('https://raw.githubusercontent.com/Datamanim/pandas/main/mergeTEst.csv',index_col= 0)
 
+df1 = df.iloc[:4,:]
+df2 = df.iloc[4:,:]
+
+ans = pd.concat([df1, df2])
 </code></pre>
 </details>
+
 Q92. df3과 df4 데이터를 하나의 데이터 프레임으로 합쳐라. 둘다 포함하고 있는 년도에 대해서만 고려한다
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+ans = pd.concat([df3, df4], join = 'inner')
 </code></pre>
 </details>
+
 Q93. df3과 df4 데이터를 하나의 데이터 프레임으로 합쳐라. 모든 컬럼을 포함하고, 결측치는 0으로 대체한다
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+ans = pd.concat([df3, df4], join = 'outer').fillna(0)
 </code></pre>
 </details>
+
 Q94. df5과 df6 데이터를 하나의 데이터 프레임으로 merge함수를 이용하여 합쳐라. Algeria컬럼을 key로 하고 두 데이터 모두 포함하는 데이터만 출력하라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+ans = pd.merge(df3, df4,on='Algeria',how='inner')
 </code></pre>
 </details>
+
 Q95. df5과 df6 데이터를 하나의 데이터 프레임으로 merge함수를 이용하여 합쳐라. Algeria컬럼을 key로 하고 합집합으로 합쳐라
 <details>
 <summary>정답 보기</summary>
 
 <pre><code>
-
+ans = pd.merge(df5, df6, on='Algeria', how='outer')
 </code></pre>
 </details>
 
