summary 아래 공백을 안넣어도 작동하는가?

--- a/_docs3/0. 판다스 연습 튜토리얼.md
+++ b/_docs3/0. 판다스 연습 튜토리얼.md
@@ -7,21 +7,22 @@ has_children: true
 
 출처: https://www.datamanim.com/dataset/99_pandas/pandasMain.html
 
-Q1. 데이터를 로드하라.
+Q1. 데이터를 로드하라. 롤 랭킹 데이터
 <details>
 <summary>1. 정답</summary>
 <!-- summary 아래 한칸 공백 두어야함 -->
 <pre><code class="language-python">
 import pandas as pd
-df = pd.read_csv()
+df = pd.read_csv("https://raw.githubusercontent.com/Datamanim/pandas/main/lol.csv", sep = '\t')
+df.head()
+
+
 </code></pre>
 </details>
 
 Q2. 데이터의 상위 5개 행 출력
-
 <details>
 <summary>정답 보기</summary>
-
 <pre><code>
 df.head(5)
 </code></pre>
